fix spacing of components and better colour choice

--- a/recipes_application_frontend/src/App.css
+++ b/recipes_application_frontend/src/App.css
@@ -13,18 +13,22 @@ body {
   flex-direction: column;
 }
 .main-content {
-  margin-top: 20px;
+  margin-top: 10vh;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   gap: 20px;
+  width: 90vw;
+  height: 75vh;
 }
-.main-content-section {
+.recipe-card {
   flex: 1;
   border: 1px solid var(--border-colour);
   border-radius: 8px;
   padding: 20px;
-  background-color: var(--section-background-colour);
+  background-color: var(--text-colour-light);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.content-section{
+  background-color: rgb(247, 251, 255, 0.5);
 }
